deploy/bases/app/magento-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-web
  labels:
    app: magento
    component: web
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: proxy
    port: 8081
    protocol: TCP
    targetPort: proxy
  - name: php-metrics
    port: 9253
    protocol: TCP
    targetPort: php-metrics
  - name: nginx-metrics
    port: 9113
    protocol: TCP
    targetPort: nginx-metrics
  selector:
    app: magento
    component: web

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento-web
  labels:
    app: magento
    component: web
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: magento
      component: web
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: magento
        component: web
    spec:
      containers:
      - image: mymagento/magento2:latest
        imagePullPolicy: IfNotPresent
        name: magento-web
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: proxy
          containerPort: 8081
          protocol: TCP
        - name: nginx-status
          containerPort: 6081
          protocol: TCP
        - name: fpm-status
          containerPort: 9001
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /health_check.php
            port: 8080
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /health_check.php
            port: 8080
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/www/html/pub/media
          name: media
          subPath: media
      - name: php-metrics-exporter
        image: hipages/php-fpm_exporter@sha256:9b5be9d3d9551e5f0155988dd799c55d6a5c08d1ce47218fccd1b030cfdd3447
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 50m
            memory: 128Mi
        ports:
        - name: php-metrics
          containerPort: 9253
          protocol: TCP
      - name: nginx-metrics-exporter
        image: nginx/nginx-prometheus-exporter:1.4.2@sha256:6edfb73afd11f2d83ea4e8007f5068c3ffaa38078a6b0ad1339e5bd2f637aacd
        args:
        - --nginx.scrape-uri=http://127.0.0.1:6081/stub_status
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 50m
            memory: 128Mi
        ports:
        - name: nginx-metrics
          containerPort: 9113
          protocol: TCP
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
